Bug 1821980: Align mathvariant implementation on MathML Core. r=emilio,jfkthame
In MathML Core, the recommendation is to directly use the proper
character from the Mathematical Alphanumeric Symbols instead of the
mathvariant attribute. The exception is for automatic italicization on
single-char `<mi>` element. This is implemented via a new text-transform
value "math-auto" [1] which is the default on the `<mi>` element. The
mathvariant attribute is now restricted to that element and to value
"normal" in order to force upright text instead [2]. This CL implements
this restriction together with that new text-transform value under the
mathml.legacy_mathvariant_attribute.disabled flag.

Some legacy MathML cases where math-auto alone does not work are
still handled via MathMLTextRunFactory.

[1] https://w3c.github.io/mathml-core/#new-text-transform-values
[2] https://w3c.github.io/mathml-core/#the-mathvariant-attribute

Differential Revision: https://phabricator.services.mozilla.com/D172395

--- a/layout/mathml/mathml.css
+++ b/layout/mathml/mathml.css
@@ -328,3 +328,11 @@ mphantom {
     display: none;
   }
 }
+
+@media (-moz-mathml-core-mi) {
+  /* Implement MathML Core's automatic italic on mi.
+     https://w3c.github.io/mathml-core/#the-mathvariant-attribute */
+  mi {
+    text-transform: math-auto;
+  }
+}
